# news-scraper

./: .dockerignore  .gitignore  Dockerfile  config.toml  pyproject.toml
.github/workflows/: post-commit-pipeline.yml  pull-request-pipeline.yml
src/: config.py  logger.py  main.py
src/application/: get_companies_command_handler.py  register_company_command_handler.py  schedule_get_latest_news_command_handler.py
src/domain/: aggregate_root.py  company.py  company_repository.py  event_publisher.py  events.py  news.py  news_fetcher.py  news_repository.py
src/infrastructure/: http_exception_handler.py  latest_news_poller.py  scheduler.py
src/infrastructure/fetchers/: in_memory_news_fetcher.py  yfinance_news_fetcher.py
src/infrastructure/listeners/: pubsub_event.py  pubsub_event_subscriber.py  pubsub_mapper.py
src/infrastructure/publishers/: in_memory_domain_event_publisher.py  pubsub_event_publisher.py
src/infrastructure/repositories/: in_memory_company_repository.py  in_memory_news_repository.py  mongo_company_repository.py  mongo_news_repository.py
